chore: added social media links

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -6,3 +6,7 @@
     background-color: rgba(255,255,255,0.6);
     background-blend-mode: lighten;
 }
+
+.social-media-link{
+    color: var(--bulma-text-strong);
+}
