fix: updated column resizing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -9,6 +9,7 @@ $orange: #ffb703;
     $info: $lightblue,
     $warning: $orange,
     $danger: $lightred,
+    $tablet: 1300px
 );
 
 .is-full-height {
