fix: issues related to the markdown rendering

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -57,7 +57,7 @@ $orange: #ffb703;
 }
 
 .blog-articles-link {
-    color: var(--has-text-primary) !important;
+    color: var(--bulma-text-strong) !important;
 }
 
 .blog-articles-link:hover {
