--- a/public/styles/a11y-dark.css
+++ b/public/styles/a11y-dark.css
@@ -10,20 +10,25 @@
  background-color: #2b2b2b !important;
 } */
 
-pre {
+/* pre {
   padding: 0 !important;
+} */
+
+pre {
+  padding: 1rem;
 }
 
-code {
-  display: block;
-  padding: 1rem !important;
-  overflow-x: auto;
-  border-radius: 0 !important;
+pre:has(> .hljs) {
+  padding: 0;
 }
 
 .hljs {
   background: #2b2b2b;
   color: #f8f8f2;
+  display: block;
+  padding: 1rem !important;
+  overflow-x: auto;
+  border-radius: 0 !important;
 }
 
 /* Comment */
